# vacheck

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
tests/: test_compare_r.py  test_datacheck5.py
vacheck/: __version__.py  datacheck5.py
