[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vacheck"
version = "0.0.3"
authors = [
    {name = "Jason Thomas", email = "jarathomas@gmail.com"},
]
maintainers = [
    {name = "Jason Thomas", email = "jarathomas@gmail.com"},
]
description = "Verbal autopsy data consistency checks (from InterVA algorithm)."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["verbal autopsy",]
license = {text = "GPLv3"}
classifiers=[
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
]
dependencies = [
        "pandas",
        "numpy",
]

[project.urls]
"Homepage" = "https://github.com/verbal-autopsy-software/vacheck"
"Bug Tracker" = "https://github.com/verbal-autopsy-software/vacheck/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"vacheck.data" = ["*.csv"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    ]
